--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "react-dom": "^16.8.1",
     "react-popper": "^0.9.2",
     "react-redux": "^7.0.3",
+    "react-redux-form": "^1.16.13",
     "react-router-dom": "^5.0.0",
     "react-scripts": "2.1.5",
     "reactstrap": "^5.0.0",
